Fix: navbar active

--- a/about/index.html
+++ b/about/index.html
@@ -87,9 +87,9 @@
             </li>
 
             <li>
-              <a href="../about/index.html" class="navbar-link active-navbar"
-                >Tentang Kami</a
-              >
+              <a href="../about/index.html" class="navbar-link"
+                >Tentang Kami <span class="active-navbar"></span
+              ></a>
             </li>
 
             <li>
