--- a/home/index.html
+++ b/home/index.html
@@ -65,9 +65,9 @@
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
             <li>
-              <a href="../home/index.html" class="navbar-link active-navbar"
-                >Home</a
-              >
+              <a href="../home/index.html" class="navbar-link"
+                >Home <span class="active-navbar"></span
+              ></a>
             </li>
 
             <li>
