--- a/riwayat/index.html
+++ b/riwayat/index.html
@@ -34,7 +34,12 @@
 
     <!-- 
     - material icon font
+    
     -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -103,9 +108,9 @@
             </li>
 
             <li>
-              <a href="../riwayat/index.html" class="navbar-link active-navbar"
-                >Riwayat Servis</a
-              >
+              <a href="../riwayat/index.html" class="navbar-link"
+                >Riwayat Servis <span class="active-navbar"></span
+              ></a>
             </li>
           </ul>
         </nav>
