--- a/booking/index.html
+++ b/booking/index.html
@@ -91,9 +91,9 @@
             </li>
 
             <li>
-              <a href="../booking/index.html" class="navbar-link active-navbar"
-                >Booking</a
-              >
+              <a href="../booking/index.html" class="navbar-link"
+                >Booking <span class="active-navbar"></span
+              ></a>
             </li>
 
             <li>
