--- a/katalog/index.html
+++ b/katalog/index.html
@@ -85,7 +85,8 @@
             </li>
   
             <li>
-              <a href="../katalog/index.html" class="navbar-link active-navbar">Katalog</a>
+              <a href="../katalog/index.html" class="navbar-link">Katalog <span class="active-navbar"></span
+              ></a>
             </li>
   
             <li>
