--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -99,9 +99,10 @@
             </li>
 
             <li>
-              <a href="../tutorial/index.html" class="navbar-link active-navbar"
-                >Tutorial</a
-              >
+              <a href="../tutorial/index.html" class="navbar-link"
+                >Tutorial
+                <div class="active-navbar"></div
+              ></a>
             </li>
 
             <li>
