--- a/admin/tambah-pengguna.html
+++ b/admin/tambah-pengguna.html
@@ -200,6 +200,7 @@
         if (file) {
           const reader = new FileReader();
           reader.addEventListener("load", function () {
+            console.log(file);
             console.log(reader.result);
             imgPreview.src = reader.result;
           });
