--- a/riwayat/index.html
+++ b/riwayat/index.html
@@ -138,6 +138,7 @@
         <!-- 
         - #BOOKING-RIWAYAT
       -->
+      <h1 class="user"><i class='bx bxs-user' style='color:#ffffff'  ></i> Hi Rudy!</h1>
         <div class="container">
           <section class="history-booking">
             <!-- Info booking 3 -->
